# LLamaSharp

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Directory.Build.props  LICENSE  LLamaSharp.sln  README.md  mkdocs.yml  version.json  versions.json
.config/: dotnet-tools.json
.github/: _typos.toml  dependabot.yml  download_models.py  prepare_release.sh  upload_to_hf.py
.github/ISSUE_TEMPLATE/: blank_issue.yml  bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  code_format.yml  codeql.yml  compile.yml  main.yml  release-minor-trigger.yml  release-minor.yml  release-patch-trigger.yml  release-patch.yml  release.yml  release_prepare.yml  spell_check.yml  stale_issues.yml  update_api_references.yml
0.11.0/: 404.html  index.html
0.11.0/Architecture/: index.html
0.11.0/ContributingGuide/: index.html
0.11.0/FAQ/: index.html
0.11.0/QuickStart/: index.html
0.11.0/search/: search_index.json
0.11.0/xmldocs/: index.html
0.11.1/Architecture/: index.html
0.11.1/QuickStart/: index.html
0.11.1/sciprts/: auto_gen_example_yml.py
0.11.1/search/: search_index.json
0.11.2/: 404.html  index.html
0.11.2/FAQ/: index.html
0.12.0/: index.html
0.12.0/ContributingGuide/: index.html
0.12.0/FAQ/: index.html
0.12.0/QuickStart/: index.html
0.12.0/search/: search_index.json
0.12.0/xmldocs/: index.html
0.13.0/sciprts/: map_xml_files_to_yml.py
0.14.0/: 404.html
0.14.0/FAQ/: index.html
0.14.0/QuickStart/: index.html
0.14.0/search/: search_index.json
0.15.0/ContributingGuide/: index.html
0.18.0/ContributingGuide/: index.html
0.18.0/search/: search_index.json
0.19.0/ContributingGuide/: index.html
0.20.0/search/: search_index.json
0.21.0/: index.html
0.21.0/QuickStart/: index.html
0.23.0/Architecture/: index.html
0.23.0/xmldocs/: index.html
0.25.0/: 404.html  index.html
0.25.0/Architecture/: index.html
0.4/: 404.html  index.html
0.5/: 404.html  index.html
Assets/: LLamaSharp-Integrations.vsdx
LLama/: AntipromptProcessor.cs  AssemblyAttributes.cs  ChatSession.cs  GlobalSuppressions.cs  GptModel.cs  GptParams.cs  IChatModel.cs  IHistoryTransform.cs  ILLamaExecutor.cs  ITextStreamTransform.cs  ITextTransform.cs  LLamaCache.cs  LLamaContext.cs  LLamaContextFactory.cs  LLamaEmbedder.EmbeddingGenerator.cs  LLamaEmbedder.cs  LLamaExecutorBase.cs  LLamaInstructExecutor.cs  LLamaInteractExecutor.cs  LLamaModel.cs  LLamaModelCache.cs  LLamaModelContext.cs  LLamaModelV1.cs  LLamaParams.cs  LLamaQuantizer.cs  LLamaReranker.cs  LLamaSharp.Runtime.targets  LLamaSharp.csproj  LLamaState.cs  LLamaStatelessExecutor.cs  LLamaTemplate.cs  LLamaTokenDataExecutor.cs  LLamaTransforms.cs  LLamaTypes.cs  LLamaWeights.cs  LLavaContext.cs  LLavaInteractExecutor.cs  LLavaWeights.cs  Logger.cs  Model.cs  (+9 more)
LLama.Benchmark/: Common.cs  Constants.cs  LLama.Benchmark.csproj  Program.cs
LLama.Console/: LLama.Console.csproj  Program.cs
LLama.Examples/: ChatSession.cs  ChatWithLLamaModel.cs  ChatWithLLamaModelV1.cs  ConsoleLogger.cs  ExampleRunner.cs  GetEmbeddings.cs  InstructMode.cs  LLama.Examples.csproj  Program.cs  Quantize.cs  RepoUtils.cs  SaveAndLoadState.cs  UserSettings.cs
LLama.Examples.WinUI/: App.xaml  App.xaml.cs  LLama.Examples.WinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest  full_processed.xml
LLama.Experimental/: LLama.Experimental.csproj
LLama.GenerateSolution/: GenerateSolution.csproj  GenerateSolution.sln  Program.cs
LLama.Jinja/: ArgumentsExpression.cs  ArgumentsValue.cs  Context.cs  Expression.cs  JinjaException.cs  LLamaSharp.Jinja.csproj  Location.cs  LocationExtensions.cs  LoopControlException.cs  LoopControlType.cs  Options.cs  OrderedDictionary.cs  Parser.cs  SpaceHandling.cs  StringUtils.cs  TemplateNode.cs  TemplateNodeParser.cs  TemplateToken.cs  Tokenizer.cs  Value.cs  ValueUtils.cs
LLama.KernelMemory/: BuilderExtensions.cs  LLamaSharp.KernelMemory.csproj  LLamaSharpTextEmbeddingGeneration.cs  LLamaSharpTextEmbeddingGenerator.cs  LlamaSharpConfig.cs  LlamaSharpTextGeneration.cs  LlamaSharpTextGenerator.cs
LLama.Rag/: IWebScraper.cs  LLama.Rag.csproj  Rag.cs  WebScraper.cs
LLama.SemanticKernel/: ChatRequestSettings.cs  ExtensionMethods.cs  LLamaSharp.SemanticKernel.csproj  LLamaSharpPromptExecutionSettings.cs  LLamaSharpPromptExecutionSettingsConverter.cs  README.md
LLama.Unittest/: AssemblyAttributes.cs  BasicTest.cs  BeamTests.cs  ChatSessionTests.cs  Constants.cs  DictionaryExtensionsTests.cs  EncodingExtensionsTests.cs  GrammarParserTest.cs  GrammarTest.cs  GreedysamplingTests.cs  IEnumerableExtensionsTests.cs  IReadOnlyListExtensionsTests.cs  IgnoreOnCIFact.cs  JinjaTests.cs  LLama.Unittest.csproj  LLamaContextTests.cs  LLamaContextWithCustomLoggerTests.cs  LLamaEmbedderTests.cs  LLamaRerankerTests.cs  LLavaWeightsTests.cs  LLavaWeigthsTests.cs  MemoryDisposalTests.cs  ModelsParamsTests.cs  MtmdContextGuardTests.cs  MtmdExecutorTests.cs  MtmdNoCiCollection.cs  MtmdWeightsTests.cs  NativeAbiTests.cs  NativeLibraryConfigContainerTests.cs  SamplingPipelineTests.cs  SamplingTests.cs  SessionStateTests.cs  StatelessExecutorTest.cs  StreamingTextDecoderTests.cs  TemplateTests.cs  TokenTests.cs
LLama.Web/: App.razor  Extensioms.cs  Extensions.cs  LLama.Web.csproj  LLamaModel.cs  Program.cs  README.md  _Imports.razor  appsettings.Development.json  appsettings.json  libman.json
LLama.WebAPI/: LLama.WebAPI.csproj  Program.cs  appsettings.json
LLavaSharp/: LLavaInteractExecutor.cs  LLavaSharp.Runtime.targets  LLavaSharp.csproj  LLavaWeights.cs  Prompt.cs
Llama.Mobile/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Llama.Mobile.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
LlavaTest/: LLavaTest.csproj  Program.cs
NetAppTest/: NetAppTest.csproj  Program.cs
NetStandardTest/: App.config  NetStandardTest.csproj  Program.cs  packages.config
docs/: Architecher.md  Architecture.md  ContributingGuide.md  FAQ.md  GetStarted.md  QuickStart.md  Tricks.md  index.md
latest/: 404.html  index.html
site/: 404.html  index.html
(+2129 files in other folders)
